--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+inference==0.9.8
+inference_gpu==0.9.8
 mediapipe==0.10.9
-numpy==1.26.4
+numpy==1.24.4
 opencv_contrib_python==4.9.0.80
-opencv_python==4.9.0.80
-ultralytics==8.1.16
+opencv_python==4.8.0.76
+opencv_python_headless==4.9.0.80
+python-dotenv==1.0.1
+ultralytics==8.1.15
