Add datasets and runs to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,9 @@ test.py
 
 # Track Validation Files
 src/ultralytics_track/val
+
+# Model Training Datasets
+datasets/
+
+# Model Training Results
+runs/
