--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 inference==0.9.8
 inference_gpu==0.9.8
+ipython==8.12.3
 mediapipe==0.10.9
 numpy==1.24.4
 opencv_contrib_python==4.9.0.80
@@ -7,4 +8,5 @@ opencv_python==4.8.0.76
 opencv_python_headless==4.8.0.74
 python-dotenv==1.0.1
 roboflow==1.1.21
+torch==2.2.1
 ultralytics==8.1.15
